--- a/package.json
+++ b/package.json
@@ -1,23 +1,48 @@
 {
+  "description": "A tiny project to bundle codemirror v6 modules with extensions into a single js file",
+  "version": "2.0.0",
   "name": "codemirror-bundler",
-  "version": "1.0.0",
-  "description": "A tiny project to bundle codemirror.next modules into a single js file",
   "main": "index.js",
+  "author": "Victor Quilon Ranera",
+  "license": "MIT",
   "scripts": {
-    "clean": "rm -rf dist",
+    "clean": "PowerShell -Command \"if (Test-Path .\\dist) {rd -r .\\dist}\"",
     "prebuild": "npm run clean",
     "build": "webpack",
     "test-site": "node test-site/server.js"
   },
   "dependencies": {
-    "@codemirror/next": "^0.10.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "codemirror": "^6.0.1",
+    "@codemirror/autocomplete": "^6.3.0",
+    "@codemirror/collab": "^6.0.0",
+    "@codemirror/commands": "^6.1.1",
+    "@codemirror/lang-cpp": "^6.0.1",
+    "@codemirror/lang-css": "^6.0.0",
+    "@codemirror/lang-html": "^6.1.2",
+    "@codemirror/lang-java": "^6.0.0",
+    "@codemirror/lang-javascript": "^6.1.0",
+    "@codemirror/lang-json": "^6.0.0",
+    "@codemirror/lang-lezer": "^6.0.0",
+    "@codemirror/lang-markdown": "^6.0.2",
+    "@codemirror/lang-php": "^6.0.0",
+    "@codemirror/lang-python": "^6.0.2",
+    "@codemirror/lang-rust": "^6.0.0",
+    "@codemirror/lang-sql": "^6.3.0",
+    "@codemirror/lang-wast": "^6.0.0",
+    "@codemirror/lang-xml": "^6.0.0",
+    "@codemirror/language": "^6.2.1",
+    "@codemirror/language-data": "^6.1.0",
+    "@codemirror/lint": "^6.0.0",
+    "@codemirror/search": "^6.2.1",
+    "@codemirror/state": "^6.1.2",
+    "@codemirror/theme-one-dark": "^6.1.0",
+    "@codemirror/view": "^6.3.1",
+    "npm-check-updates": "^16.3.11",
+    "webpack": "*",
+    "webpack-cli": "*"
   },
   "devDependencies": {
-    "@types/node": "^14.0.27",
-    "express": "^4.17.1"
-  },
-  "author": "Ashray Mehta",
-  "license": "MIT"
+    "@types/node": "^18.8.5",
+    "express": "^4.18.2"
+  }
 }
